@@ -52,7 +52,7 @@ public final class RefDoubleImpl implements RefDouble {
 
     @Override
     public Double toDouble() {
-        return new Double(value);
+        return Double.valueOf(value);
     }
     
 	@Override
