@@ -44,7 +44,7 @@ public final class IntDiv extends RefSupport implements Ref {
 
     @Override
 	public Object getValue(PageContext pc) throws PageException {
-        return new Double(Caster.toIntValue(left.getValue(pc))/Caster.toIntValue(right.getValue(pc)));
+        return Double.valueOf(Caster.toIntValue(left.getValue(pc))/Caster.toIntValue(right.getValue(pc)));
     }
 
     @Override
