@@ -356,7 +356,7 @@ public final class Reflector {
 			if(trgClass==Double.class)			return Caster.toDouble(src);
 			if(trgClass==Character.class) {
 				String str=Caster.toString(src,null);
-				if(str!=null && str.length()==1) return new Character(str.charAt(0));
+				if(str!=null && str.length()==1) return Character.valueOf(str.charAt(0));
 			}
 		}
 		
@@ -1315,7 +1315,7 @@ public final class Reflector {
 	private static Byte[] toRefArray(byte[] src) {
 		Byte[] trg=new Byte[src.length];
 		for(int i=0;i<trg.length;i++) {
-			trg[i]=new Byte(src[i]);
+			trg[i]=Byte.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1323,7 +1323,7 @@ public final class Reflector {
 	private static Character[] toRefArray(char[] src) {
 		Character[] trg=new Character[src.length];
 		for(int i=0;i<trg.length;i++) {
-			trg[i]=new Character(src[i]);
+			trg[i]=Character.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1355,7 +1355,7 @@ public final class Reflector {
 	private static Float[] toRefArray(float[] src) {
 		Float[] trg=new Float[src.length];
 		for(int i=0;i<trg.length;i++) {
-			trg[i]=new Float(src[i]);
+			trg[i]=Float.valueOf(src[i]);
 		}
 		return trg;
 	}
@@ -1363,7 +1363,7 @@ public final class Reflector {
 	private static Double[] toRefArray(double[] src) {
 		Double[] trg=new Double[src.length];
 		for(int i=0;i<trg.length;i++) {
-			trg[i]=new Double(src[i]);
+			trg[i]=Double.valueOf(src[i]);
 		}
 		return trg;
 	}
