@@ -221,7 +221,7 @@ public final class ZEval
                     throw new SQLException("ZEval.evalExpValue(): unknown column " + zconstant.getValue());
                 try
                 {
-                    obj = new Double(obj1.toString());
+                    obj = Double.valueOf(obj1.toString());
                 }
                 catch(NumberFormatException numberformatexception)
                 {
@@ -230,7 +230,7 @@ public final class ZEval
                 break;
 
             case 2: // '\002'
-                obj = new Double(zconstant.getValue());
+                obj = Double.valueOf(zconstant.getValue());
                 break;
 
             case 1: // '\001'
@@ -241,7 +241,7 @@ public final class ZEval
             }
         } else
         if(zexp instanceof ZExpression)
-            obj = new Double(evalNumericExp(ztuple, (ZExpression)zexp));
+            obj = Double.valueOf(evalNumericExp(ztuple, (ZExpression)zexp));
         return obj;
     }
 
